mongo.yaml
# MongoDB deployment configuration
# Reference: TechWorld with Nana, 2022 (https://www.youtube.com/watch?v=oBf5lrmquYI), Luu, 2022 (https://release.com/blog/how-to-create-and-configure-your-kubernetes-service-account)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      automountServiceAccountToken: false
      serviceAccountName: dev
      containers:
      - name: mongodb
        image: mongo:latest
        resources:
          requests:
            cpu: "200m"
            memory: "100Mi"
          limits:
            cpu: "300m"
            memory: "170Mi"
        ports:
        - containerPort: 27017
---
# MongoDB service configuration
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
