webapp.yaml
# Configuration for the basic web application deployment
# Reference: TechWorld with Nana, 2022 (https://www.youtube.com/watch?v=oBf5lrmquYI), Luu, 2022 (https://release.com/blog/how-to-create-and-configure-your-kubernetes-service-account)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  labels:
    app: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
# Security restrictions
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      automountServiceAccountToken: false
      serviceAccountName: dev
      containers:
      - name: web-app
        image: nanajanashia/k8s-demo-app:v1.0
# Resource restrictions
        resources:
          requests:
            cpu: "200m"
            memory: "100Mi"
          limits:
            cpu: "300m"
            memory: "170Mi"
        ports:
        - containerPort: 3000
        securityContext:
          runAsUser: 10000
          readOnlyRootFilesystem: true
---
# Configuration for the web application service
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30100
